# main_module_demo

./: pyproject.toml
python/main_module_demo/: top_module.py
python/main_module_demo/subpackage/: inner_module.py
