[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.metadata]
name = "main_module_demo"
version = "1.0"
description = "Demonstrates printing the module to which a main script belongs"
authors = [
    "Stefan Sullivan <stefan.sullivan@gmail.com>"
]
license = "MIT"
homepage = "https://github.com/stefansjs/main_module_demo"
repository = "https://github.com/stefansjs/main_module_demo"
classifiers = """ \
    Programming Language :: Python :: 3 \
    Programming Language :: Python :: 3.6 \
    """

[tool.setuptools.options]
package_dir = "=python"
packages="find:"

[tool.setuptools.options.packages.find]
where="python"
