[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "main_module_demo"
version = "1.0"
description = "Demonstrates printing the module to which a main script belongs"
authors = [
    "Stefan Sullivan <stefan.sullivan@gmail.com>"
]
license = "MIT"
homepage = "https://github.com/stefansjs/main_module_demo"
repository = "https://github.com/stefansjs/main_module_demo"
classifiers = [
    """Programming Language :: Python :: 3""",
    """Programming Language :: Python :: 3.6""",
]
packages= [
    { include = "main_module_demo", from = "python" },
    { include = "main_module_demo/subpackage", from = "python" },
]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

